--- a/style.scss
+++ b/style.scss
@@ -26,3 +26,48 @@ body
     }  
 }
 
+body, ul{
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+a{
+    text-decoration: none;
+    color: #000;
+}
+
+
+.RestaurantPic{
+    height: 250px;
+    width: 100%;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+}  
+
+.la_palette_du_gout{
+    background-image: url(images/Restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg)
+}
+
+.la_note_enchantee{
+    background-image: url(images/Restaurants/stil-u2Lp8tXIcjw-unsplash.jpg)
+}
+
+.a_la_francaise{
+   background-image: url(images/Restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg)
+}
+
+.le_delice_des_sens{
+    background-image: url(images/Restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg)
+}
+
+.New{
+    background-color: lightgreen;
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px;
+    padding: 4px;
+} 
