--- a/style/style_page.css
+++ b/style/style_page.css
@@ -1,1 +1,247 @@
-/* No CSS *//*# sourceMappingURL=style_page.css.map */
+@charset "UTF-8";
+/*--Déclaration des variables--*/
+/*--Déclaration des fonctions--*/
+/* ----- Applicable à toute la page ----- */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap");
+body, ul {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+li {
+  list-style: none;
+}
+
+h1, h2, h3 {
+  margin: 0;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+/* ----- Mise en page en tete ----- */
+.PageHeader {
+  height: 60px;
+}
+
+.PageHeader img {
+  display: block;
+  width: 170px;
+  padding: 20px 0 0 0;
+  margin: auto;
+}
+
+.PageHeader i {
+  position: absolute;
+  margin-top: 25px;
+  margin-left: 15px;
+}
+
+/* ----- Photo de présentation du restaurant ----- */
+.PageRestaurantPic {
+  height: 300px;
+  width: 100%;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+}
+
+.la_palette_du_gout {
+  background-image: url(../style/images/Restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+}
+
+.la_note_enchantee {
+  background-image: url(../style/images/Restaurants/stil-u2Lp8tXIcjw-unsplash.jpg);
+}
+
+.a_la_francaise {
+  background-image: url(../style/images/Restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
+}
+
+.le_delice_des_sens {
+  background-image: url(../style/images/Restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
+}
+
+/* ----- Nom du restaurant + like ----- */
+.RestaurantName {
+  height: 60px;
+  margin-top: -30px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  background-color: #e6e6e6;
+  border-radius: 1.8rem 1.8rem 0 0;
+  position: relative;
+}
+
+.RestaurantName h2 {
+  text-align: center;
+  padding-left: 30px;
+  padding-top: 20px;
+  font-family: 'Shrikhand', cursive;
+  font-size: 1.4rem;
+}
+
+.RestaurantName i {
+  padding-right: 20px;
+  padding-top: 13px;
+}
+
+/* ----- Entrées ----- */
+.Menu {
+  background-color: #e6e6e6;
+  padding: 10px 20px;
+}
+
+.Menu .StartersMenu, .Menu .MainsMenu, .Menu .DessertsMenu {
+  margin-bottom: 30px;
+}
+
+.Menu h3 {
+  padding-top: 20px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 200;
+}
+
+.Menu h3::after {
+  content: "";
+  display: block;
+  height: 3px;
+  width: 50px;
+  background-color: #99E2D0;
+  margin-top: 5px;
+}
+
+.DishOptions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #fff;
+  margin-top: 14px;
+  border-radius: 1rem;
+  overflow: hidden;
+  -webkit-box-shadow: 0 5px 10px #737373;
+          box-shadow: 0 5px 10px #737373;
+  padding: 0;
+  position: relative;
+}
+
+.DishOptions .DishText {
+  width: 80%;
+  padding: 13px 0 13px 12px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.DishOptions .DishText .DishName {
+  font-weight: 500;
+  font-size: 1.1rem;
+  margin-bottom: 5px;
+  white-space: nowrap;
+}
+
+.DishOptions .DishText p {
+  margin: 0;
+  font-weight: 300;
+  font-size: 0.9rem;
+  text-overflow: ellipsis;
+}
+
+.DishOptions .DishPrice {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  color: grey;
+  font-weight: 700;
+  position: absolute;
+  right: 15px;
+  bottom: 15px;
+}
+
+/* ----- Buton commander ----- */
+1
+.btn {
+  display: block;
+  margin: auto !important;
+  margin-top: 40px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: inline-block;
+  height: 50px;
+  padding: 0 49px;
+  border-radius: 1.5rem;
+  border: none;
+  color: #fff;
+  font-size: 1rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  background: linear-gradient(170deg, #FF79DA, #a16be0);
+  -webkit-box-shadow: 0 5px 10px #737373;
+          box-shadow: 0 5px 10px #737373;
+  cursor: pointer;
+}
+
+1
+.btn a {
+  color: #fff;
+}
+
+1
+.btn:hover {
+  background: linear-gradient(170deg, #ffa2e5, #a978e3);
+  -webkit-box-shadow: 0 5px 10px 20%;
+          box-shadow: 0 5px 10px 20%;
+}
+
+@media screen and (min-width: 600px) {
+  1
+.btn {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+}
+
+/* ----- Mise en page pied de page ----- */
+footer {
+  background-color: #4a4a4a;
+}
+
+footer h3, footer a, footer i {
+  color: white;
+}
+
+footer h3 {
+  font-family: 'Shrikhand', cursive;
+  font-size: 1.2rem;
+  padding: 20px 20px 10px 20px;
+}
+
+footer li {
+  font-size: 0.9rem;
+  font-weight: 300;
+  margin-left: 15px;
+  padding: 5px;
+}
+
+footer i {
+  font-size: 0.8rem;
+  width: 21px;
+  margin: 0 5px 0 0;
+}
+/*# sourceMappingURL=style_page.css.map */
