--- a/style/style_homepage.css
+++ b/style/style_homepage.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /*--Déclaration des variables--*/
 /*--Déclaration des fonctions--*/
+/*--Transitions--*/
 /* ----- Applicable à toute la page ----- */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap");
 body, ul {
@@ -30,35 +31,53 @@ h1, h2, h3 {
 
 /* ----- Mise en page en tete ----- */
 .HomepageHeader {
-  height: 60px;
+  height: 50px;
 }
 
 .HomepageHeader img {
   margin: auto;
+  margin-bottom: 16px;
   width: 170px;
+}
+
+@media screen and (min-width: 600px) {
+  .HomepageHeader {
+    height: 120px;
+  }
+  .HomepageHeader img {
+    margin-bottom: 20px;
+    width: 250px;
+  }
 }
 
 /* ----- Mise en page ligne de localisation ----- */
 .Location {
   height: 50px;
-  background-color: #d6d6d6;
+  background-color: gainsboro;
   color: black;
   -webkit-box-shadow: inset 0 5px 4px -2px #c7c7c7;
           box-shadow: inset 0 5px 4px -2px #c7c7c7;
 }
 
 .Location i {
-  margin-right: 15px;
+  font-size: 20px;
+  margin-right: 18px;
 }
 
 .Location p {
   margin: auto;
-  font-size: 0.9rem;
+  font-size: 1rem;
+}
+
+@media screen and (min-width: 600px) {
+  .Location p {
+    font-size: 1.3rem !important;
+  }
 }
 
 /* ----- Mise en page bloc de présentation ----- */
 .About {
-  padding: 40px 25px 55px;
+  padding: 60px 25px 55px;
   background-color: #f0f0f0;
   text-align: center;
 }
@@ -68,21 +87,21 @@ h1, h2, h3 {
 }
 
 .About h2 {
-  font-weight: 800;
-  font-size: 1.5rem;
-  margin-bottom: 15px;
+  font-weight: 550;
+  font-size: 1.7rem;
+  margin: 0 40px 15px 40px;
 }
 
 .About p {
   margin-bottom: 30px;
   font-weight: 200;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 .About a {
   color: white;
-  font-weight: 300;
-  font-size: 0.9rem;
+  font-weight: 400;
+  font-size: 1rem;
   vertical-align: middle;
 }
 
@@ -90,33 +109,59 @@ h1, h2, h3 {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   display: inline-block;
-  width: 200px;
+  width: 230px;
   height: 48px;
   padding: 15px;
-  border-radius: 1.1rem;
+  border-radius: 2rem;
   border: none !important;
-  background-image: linear-gradient(160deg, #ff46cc, #782cd3);
-  -webkit-box-shadow: 0 5px 10px #737373;
-          box-shadow: 0 5px 10px #737373;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ff60d3), to(#8641d8));
+  background-image: linear-gradient(180deg, #ff60d3, #8641d8);
+  -webkit-box-shadow: 0 5px 15px silver;
+          box-shadow: 0 5px 15px silver;
   cursor: pointer;
 }
 
 .About .btn:hover {
   background: -webkit-gradient(linear, left top, left bottom, from(#ffa2e5), to(#a978e3));
   background: linear-gradient(180deg, #ffa2e5, #a978e3);
-  -webkit-box-shadow: 0 5px 10px #a3a3a3;
-          box-shadow: 0 5px 10px #a3a3a3;
+  -webkit-box-shadow: 0 5px 15px #a3a3a3;
+          box-shadow: 0 5px 15px #a3a3a3;
+}
+
+@media screen and (min-width: 600px) {
+  .About h2 {
+    font-size: 1.9rem !important;
+  }
+  .About a, .About p {
+    font-size: 1.5rem !important;
+  }
+  .About .btn {
+    width: 650px;
+    height: 60px;
+    background-image: linear-gradient(160deg, #ff88de, #9b63df);
+  }
 }
 
 /* ----- Mise en page bloc du fonctionnement ----- */
 .HowTo {
-  padding: 50px 15px 60px;
+  padding: 55px 10px 55px 20px;
 }
 
 .HowTo h2 {
-  font-weight: 750;
-  font-size: 1.4rem;
-  margin: 50px 20px 30px 20px;
+  font-weight: 550;
+  font-size: 1.7rem;
+  margin-bottom: 35px;
+}
+
+@media screen and (min-width: 600px) {
+  .HowTo {
+    padding: 20px 10px 30px;
+  }
+  .HowTo h2 {
+    font-weight: 600;
+    font-size: 1.5rem;
+    margin: 30px 20px;
+  }
 }
 
 .HowToList {
@@ -124,12 +169,12 @@ h1, h2, h3 {
 }
 
 .HowToStep {
-  height: 75px;
+  height: 85px;
   width: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .HowToStep .StepNumber {
@@ -150,7 +195,7 @@ h1, h2, h3 {
   position: relative;
   left: -12px;
   background-color: #f0f0f0;
-  border-radius: 1.1rem;
+  border-radius: 1.6rem;
   width: 100%;
   height: 100%;
   -webkit-box-align: center;
@@ -158,8 +203,8 @@ h1, h2, h3 {
           align-items: center;
   font-size: 1rem;
   font-weight: 400;
-  -webkit-box-shadow: 0 5px 10px #737373;
-          box-shadow: 0 5px 10px #737373;
+  -webkit-box-shadow: 0 5px 15px silver;
+          box-shadow: 0 5px 15px silver;
 }
 
 .HowToStep .StepText i {
@@ -179,27 +224,28 @@ h1, h2, h3 {
 
 /* ----- Bloc Restaurants ----- */
 .Restaurants {
-  padding: 60px 20px 50px 20px;
-  background-color: #ebebeb;
+  padding: 60px 25px 50px 25px;
+  background-color: #ededed;
 }
 
 .Restaurants h2 {
-  padding: 10px;
+  font-weight: 600;
+  font-size: 1.5rem;
   margin-bottom: 20px;
 }
 
 .Restaurants .RestaurantCard {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  height: 250px;
+  height: 280px;
   border-radius: 1rem;
   margin-bottom: 20px;
-  -webkit-box-shadow: 0 5px 10px #737373;
-          box-shadow: 0 5px 10px #737373;
+  -webkit-box-shadow: 0 5px 15px silver;
+          box-shadow: 0 5px 15px silver;
 }
 
 .Restaurants .RestaurantPic {
-  height: 75%;
+  height: 70%;
   width: 100%;
   border-radius: 1rem 1rem 0 0;
   background-size: cover;
@@ -208,7 +254,7 @@ h1, h2, h3 {
 }
 
 .Restaurants .RestaurantPicEX {
-  height: 75%;
+  height: 70%;
   width: 100%;
   border-radius: 1rem 1rem 0 0;
   background-size: cover;
@@ -234,19 +280,18 @@ h1, h2, h3 {
 
 .Restaurants .New {
   background-color: #99E2D0;
-  color: #32b091;
+  color: #278870;
   position: absolute;
-  top: 15px;
-  right: 15px;
-  margin: 10px;
-  padding: 5px 10px;
+  top: 12px;
+  right: 12px;
+  padding: 6px 15px;
   border-radius: 1px;
   font-weight: 500;
   font-size: 0.9rem;
 }
 
 .Restaurants .RestaurantDetails {
-  height: 25%;
+  height: 30%;
   background-color: #fff;
   border-radius: 0 0 1rem 1rem;
 }
@@ -255,7 +300,7 @@ h1, h2, h3 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  padding-left: 13px;
+  padding-left: 15px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -266,16 +311,51 @@ h1, h2, h3 {
 }
 
 .Restaurants .RestaurantDetails .DetailsText .RestaurantName {
-  margin: 0;
-  font-weight: 700;
-  font-size: 1rem;
+  font-weight: 600;
+  font-size: 1.2rem;
   margin-bottom: 5px;
 }
 
 .Restaurants .RestaurantDetails .DetailsText p {
   margin: 0;
   font-weight: 300;
-  font-size: 0.9rem;
+  font-size: 1.2rem;
+}
+
+#EmptyHeart {
+  margin-top: 25px;
+  margin-right: 20px;
+  position: relative;
+  color: #7D7D7D;
+  height: 26px;
+  opacity: 1;
+  display: block;
+}
+
+#FullHeart {
+  margin-top: 25px;
+  margin-right: 20px;
+  height: 25px;
+}
+
+.Like #FullHeart {
+  opacity: 0;
+}
+
+.Like #EmptyHeart {
+  opacity: 1;
+}
+
+.Like:hover #EmptyHeart {
+  display: none;
+  opacity: 0;
+}
+
+.Like:hover #FullHeart {
+  display: block;
+  opacity: 1;
+  -webkit-transition: opacity 2s ease-in;
+  transition: opacity 2s ease-in;
 }
 
 /* ----- Mise en page pied de page ----- */
