--- a/style/style_homepage.scss
+++ b/style/style_homepage.scss
@@ -1,59 +1,60 @@
 /*--Déclaration des variables--*/
-$primary-color:#9356DC;
-$secondary-color:#FF79DA;
-$tertiary-color:#99E2D0;
-$lightgrey-color:darken(whitesmoke, 2%);
-$darkgrey-color: darken(grey, 25%);
+$primaryColor:#9356DC;
+$secondaryColor:#FF79DA;
+$tertiaryColor:#99E2D0;
+$lightgreyColor:darken(whitesmoke, 2%);
+$darkgreyColor: darken(grey, 25%);
 $white:#fff;
 
-$check-transition-width: 70px;
-$menu-appear-delay: 200ms;
-$max-dishes: 4;
+$checkTransitionWidth: 70px;
+$menuAppearDelay: 200ms;
+$maxDishes: 4;
 
-$images-resto:(
-    la_palette_du_gout: 'images/Restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg',
-    la_note_enchantee: 'images/Restaurants/stil-u2Lp8tXIcjw-unsplash.jpg',
-    a_la_francaise: 'images/Restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg',
-    le_delice_des_sens: 'images/Restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg'
+$imageRestaurants:(
+    la_palette_du_gout: 'images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg',
+    la_note_enchantee: 'images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg',
+    a_la_francaise: 'images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg',
+    le_delice_des_sens: 'images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg'
 );
 
-$breakpoints-map:(
+$breakpointsMap:(
     tablet: 600px,
     desktop: 1024px
 );
 
 /*--Déclaration des fonctions--*/
-@mixin shadow-box($color: lighten(grey, 25%)) {
+@mixin shadowBox($color: lighten(grey, 25%)) {
     box-shadow: 0 5px 15px $color;
 }
 
-@mixin background_grey($scale : 0%){
-  background-color: darken($lightgrey-color, $scale);
+@mixin backgroundGrey($scale : 0%){
+  background-color: darken($lightgreyColor, $scale);
 }
 
-@mixin check-transition-timing($type){
+@mixin checkTransitionTiming($type){
     transition: $type 300ms 100ms linear;
 }
 
 @mixin breakpoints($min-device) {
-  @media screen and (min-width: map-get($breakpoints-map, $min-device)){
+  @media screen and (min-width: map-get($breakpointsMap, $min-device)){
       @content;
   }
 }
 
 /*--Page Loader--*/
 
-.page_loader{
+.pageLoader{
+  height: 100%;
+  position: absolute;
   display: flex;
-  position: fixed;
   z-index: 3;
   transform: scale(0);
-  background-color: rgba($gray-color, 0.5);
+  background-color: white;
   animation: load-background 3s 100ms backwards;
   .spinner{
       transform: scale(0);
       font-size: 8rem;
-      color: $primary-color;
+      color: $primaryColor;
       margin: auto;
       animation: load-spinner 3s 100ms linear backwards;
   }
@@ -64,7 +65,7 @@ $breakpoints-map:(
       transform: rotate(0deg);
   }
   75% {
-      opacity: .75;
+      opacity: 0.75;
   }
   100% {
       transform: rotate(3turn);
@@ -84,14 +85,14 @@ $breakpoints-map:(
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap');
 
 body, ul{
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 a{
-    text-decoration: none;
-    color: #000;
+  text-decoration: none;
+  color: #000;
 }
 
 li{
@@ -99,11 +100,11 @@ li{
 }
 
 h1, h2, h3{
-    margin: 0;
+  margin: 0;
 }
 
 .flex{
-    display: flex;
+  display: flex;
 }
 
 /* ----- Mise en page en tete ----- */
@@ -111,26 +112,26 @@ h1, h2, h3{
   height: 50px;
 
   img{
-      margin: auto;
-      margin-bottom: 16px;
-      width: 170px;
+    margin: auto;
+    margin-bottom: 16px;
+    width: 170px;
   }
 
-@include breakpoints(tablet){
-  height: 120px;
-  img{
-    margin-bottom: 20px;
-    width: 250px;
-}
-}
+  @include breakpoints(tablet){
+    height: 120px;
+    img{    
+      margin-bottom: 20px;
+      width: 250px;
+    }
+  }
 }
 
 /* ----- Mise en page ligne de localisation ----- */
-.Location{
+.location {
   height: 50px;
-  @include background_grey(8%);
-  color: darken($darkgrey-color, 50%);
-  box-shadow: inset 0 5px 4px -2px darken($lightgrey-color, 16%);
+  @include backgroundGrey(8%);
+  color: darken($darkgreyColor, 50%);
+  box-shadow: inset 0 5px 4px -2px darken($lightgreyColor, 16%);
 
   i{
     font-size: 20px; 
@@ -142,30 +143,33 @@ h1, h2, h3{
     font-size:1rem;
   }
 
-@include breakpoints(tablet){
-  p{
-  font-size: 1.3rem !important;
+  @include breakpoints(tablet){
+    p{
+      font-size: 1.3rem !important;
+    }
   }
-}
 }
 
 /* ----- Mise en page bloc de présentation ----- */
-.About{
+.about{
   padding: 60px 25px 55px;
-  @include background_grey(0%);
+  @include backgroundGrey(0%);
   text-align: center;
+
   h2, p{
     display:block;
   }
+
   h2{
-      font-weight: 550;
-      font-size:1.7rem;  
-      margin: 0 40px 15px 40px;
+    font-weight: 550;
+    font-size:1.7rem;  
+    margin: 0 40px 15px 40px;
   }
+
   p{
-      margin-bottom: 30px;
-      font-weight: 200;
-      font-size: 1.2rem;
+    margin-bottom: 30px;
+    font-weight: 200;
+    font-size: 1.2rem;
   }
 
   a{
@@ -183,32 +187,37 @@ h1, h2, h3{
     padding: 15px;
     border-radius: 2rem;
     border:none !important;
-    background-image: linear-gradient(180deg,darken($secondary-color, 5%), darken($primary-color,5%));
-    @include shadow-box;
+    background-image: linear-gradient(180deg,darken($secondaryColor, 5%), darken($primaryColor,5%));
+    @include shadowBox;
     cursor: pointer;
     &:hover{
-        background: linear-gradient(180deg, lighten($secondary-color, 8%), lighten($primary-color, 8%));
-        @include shadow-box(darken($lightgrey-color, 30%));
+      background: linear-gradient(180deg, lighten($secondaryColor, 8%), lighten($primaryColor, 8%));
+      @include shadowBox(darken($lightgreyColor, 30%));
     }
-}
+    @include breakpoints(tablet){
+      transform: scale(1.1);
+    }
+  }
 
-@include breakpoints(tablet){
-  h2{
-  font-size: 1.9rem !important;
+  @include breakpoints(tablet){
+    h2{
+      font-size: 1.9rem !important;
+    }
+    
+    a, p{
+      font-size: 1.5rem !important;
+    }
+  
+    .btn{
+      width: 650px;
+      height: 60px;
+      background-image: linear-gradient(160deg,lighten($secondaryColor,3%), lighten($primaryColor,3%));
+    }
   }
-  a, p{
-  font-size: 1.5rem !important;
-  }
-  .btn{
-    width: 650px;
-    height: 60px;
-    background-image: linear-gradient(160deg,lighten($secondary-color,3%), lighten($primary-color,3%));
-  }
-}
 }
 
 /* ----- Mise en page bloc du fonctionnement ----- */
-.HowTo{
+.howTo{
   padding: 55px 10px 55px 20px;
 
   h2{
@@ -217,121 +226,165 @@ h1, h2, h3{
     margin-bottom:35px;
   }
 
-@include breakpoints(tablet){
-  padding: 20px 10px 30px;
-  h2{
-    font-weight: 600;
-    font-size:1.5rem;
-    margin: 30px 20px;
-  }
-} 
+  @include breakpoints(tablet){
+    padding: 20px 10px 30px;
+    
+    h2{
+      font-weight: 600;
+      font-size:1.8rem;
+      margin: 30px 20px;
+    }
+  } 
 }
 
-.HowToList{
+.howToList{
   width: 100%;
+
+  @include breakpoints(tablet){
+    display: row;
+    }
 }
 
-.HowToStep{
+.howToStep{
   height: 85px;
   width: 100%;
   align-items: center;
   margin-bottom: 30px;
 
-  .StepNumber{
-      background-color: $primary-color;
-      height: 25px;
-      width: 25px;
-      color: $white;
-      border-radius: 50%;
-      z-index: 2;
-      font-size: 0.9rem;
-      span{
-          margin: auto;
-      }
-  }
+  .stepNumber{
+    background-color: $primaryColor;
+    height: 25px;
+    width: 25px;
+    color: $white;
+    border-radius: 50%;
+    z-index: 2;
+    font-size: 0.9rem;
 
-  .StepText{
-      position: relative;
-      left: -12px;
-      @include background_grey;
-      border-radius: 1.6rem;
-      width: 100%;
-      height: 100%;
-      align-items: center;
+    span{
+      margin: auto;
+    }
+
+    @include breakpoints(tablet){
+      height: 45px;
+      width: 45px;
+      border-radius: 50%;
       font-size: 1rem;
-      font-weight: 400;
-      @include shadow-box;
-      i{
-          width: 21px;
-          color: #7D7D7D;
-          margin: 0 25px 0 30px;
-          font-size: 1.2rem;
-      }
-      &:hover{
-          background-color: lighten($primary-color, 36%);
-          i{
-              color: $primary-color;
-          }
-      }
+    }
+  } 
+}
+
+.stepText{
+  position: relative;
+  left: -12px;
+  @include backgroundGrey;
+  border-radius: 1.6rem;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: 400;
+  @include shadowBox;
+
+  i{
+    width: 21px;
+    color: #7D7D7D;
+    margin: 0 25px 0 30px;
+    font-size: 1.2rem;
+  }
+      
+  &:hover{
+    background-color: lighten($primaryColor, 36%);
+    i{
+      color: $primaryColor;
+    }
+  }
+      
+  @include breakpoints(tablet){
+    font-size: 1.1rem;
   }
 }
 
-/* ----- Bloc Restaurants ----- */
-.Restaurants{
+/* ----- Bloc restaurants ----- */
+.restaurants{
   padding: 60px 25px 50px 25px;
-  @include background_grey (1%);
+  @include backgroundGrey (1%);
 
   h2{
-    font-weight: 600;
-    font-size:1.5rem;
-    margin-bottom: 20px;
+  font-weight: 600;
+  font-size:1.5rem;
+  margin-bottom: 20px;
+
+    @include breakpoints(tablet){
+      font-size: 1.8rem;
+    }
   }
+}
   
-  .RestaurantCard{
+.restaurantsBox{
+  @include breakpoints(tablet){
+    display: row;
+    flex-wrap: wrap;
+  }
+
+  .restaurantCard{
     box-sizing: border-box;
     height: 280px;
     border-radius: 1rem;
     margin-bottom: 20px;
-    @include shadow-box;
+    @include shadowBox;
+
+    @include breakpoints(tablet){
+      width: 50%;
+      height: 400px;
+      padding:20px;
+    }
   }
 
-  .RestaurantPic{
+  .restaurantPic{
     height: 70%;
     width: 100%;
     border-radius: 1rem 1rem 0 0;
     background-size: cover;
     background-position: bottom center;
     position: relative;
+
+    @include breakpoints(tablet){
+      height: 80%;
+    }
   }
 
-  .RestaurantPicEX {
+  .restaurantPicEX{
     height: 70%;
     width: 100%;
     border-radius: 1rem 1rem 0 0;
     background-size: cover;
     background-position: center center;
     position: relative;
+
+    @include breakpoints(tablet){
+      height: 80%;
+    }
   }
 
   .la_palette_du_gout{
-    background-image: url(images/Restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg)
+    background-image: url(images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg)
   }
   
   .la_note_enchantee{
-    background-image: url(images/Restaurants/stil-u2Lp8tXIcjw-unsplash.jpg)
+    background-image: url(images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg)
   }
   
   .a_la_francaise{
-    background-image: url(images/Restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg)
+    background-image: url(images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg)
   }
   
   .le_delice_des_sens{
-    background-image: url(images/Restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg)
+    background-image: url(images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg)
   }
 
   .New{
-    background-color: $tertiary-color;
-    color: darken($tertiary-color, 40%);
+    background-color: $tertiaryColor;
+    color: darken($tertiaryColor, 40%);
     position: absolute;
     top: 12px;
     right: 12px;
@@ -339,35 +392,50 @@ h1, h2, h3{
     border-radius: 1px;
     font-weight: 500;
     font-size: 0.9rem;
+
+    @include breakpoints(tablet){
+      font-size: 1.4rem;
+    }
   }
 
-  .RestaurantDetails{
+  .restaurantDetails{
     height: 30%;
     background-color: $white;
     border-radius: 0 0 1rem 1rem;
 
-    .DetailsText{
+    @include breakpoints(tablet){
+      height: 20%;
+    }
+
+    .detailsText{
       flex: 1;
       padding-left: 15px;
       flex-direction: column;
       justify-content: center;
 
-      .RestaurantName{
+      .restaurantName{
         font-weight: 600;
         font-size: 1.2rem;
         margin-bottom: 5px;
+
+        @include breakpoints(tablet){
+          font-size: 1.4rem;
+          margin-top: 2px;
+          margin-bottom: 2px;
+        }
       }
 
       p{
         margin: 0;
         font-weight: 300;
         font-size: 1.2rem;
-      }
+      } 
     }
   }
 }
 
-#EmptyHeart {
+/* ----- Transition like ----- */
+#emptyHeart {
   margin-top: 25px;
   margin-right: 20px;
   position: relative;
@@ -376,25 +444,26 @@ h1, h2, h3{
   opacity: 1;
   display: block; 
 }
-#FullHeart {
+
+#fullHeart {
   margin-top: 25px;
   margin-right: 20px;
   height: 25px;
 }
 
 .Like {
-  #FullHeart {
+  #fullHeart {
     opacity: 0;
   }
-  #EmptyHeart {
+  #emptyHeart {
     opacity: 1;
   }
   &:hover{
-    #EmptyHeart {
+    #emptyHeart {
       display: none;
       opacity: 0;
     }
-    #FullHeart {
+    #fullHeart {
       display: block;
       opacity: 1;
       transition: opacity 2s ease-in; 
@@ -402,10 +471,9 @@ h1, h2, h3{
   }
 }
 
-
 /* ----- Mise en page pied de page ----- */
 footer{
-  @include background_grey (65%);
+  @include backgroundGrey (65%);
 
   h3, a, i {
     color: white;
@@ -415,7 +483,7 @@ footer{
     font-family: 'Shrikhand', cursive;
     font-size:1.2rem;
     padding: 20px 20px 10px 20px;
-    }
+  }
 
   li{
     font-size:0.9rem;
@@ -423,9 +491,20 @@ footer{
     margin-left: 15px;
     padding: 5px;
   }
+
   i {
     font-size:0.8rem;
     width: 21px;
     margin: 0 5px 0 0;
+  }
+
+  @include breakpoints(tablet){
+    h3 {
+      font-size: 1.6rem;
+    }
+
+    li {
+      font-size: 1.3rem;
+    }
   }
 }
