--- a/style/style_page.scss
+++ b/style/style_page.scss
@@ -1,29 +1,37 @@
 /*--Déclaration des variables--*/
-$primary-color:#9356DC;
-$secondary-color:#FF79DA;
-$tertiary-color:#99E2D0;
-$lightgrey-color:darken(whitesmoke, 2%);
-$darkgrey-color: darken(grey, 25%);
+$primaryColor:#9356DC;
+$secondaryColor:#FF79DA;
+$tertiaryColor:#99E2D0;
+$lightgreyColor:darken(whitesmoke, 2%);
+$darkgreyColor: darken(grey, 25%);
 $white:#fff;
 
-$breakpoints-map:(
-    tablet: 600px,
+$breakpointsMap:(
+    tablet: 300px,
     desktop: 1024px
 );
 
+$checkTransitionWidth: 72px;
+$menuAppearDelay: 400ms;
+$maxDishes: 4;
+
 /*--Déclaration des fonctions--*/
-@mixin shadow-box($color: darken(grey, 5%)) {
+@mixin shadowBox($color: darken(grey, 5%)) {
     box-shadow: 0 5px 10px $color;
 }
 
-@mixin background_grey($scale : 0%){
-  background-color: darken($lightgrey-color, $scale);
+@mixin backgroundGrey($scale : 0%){
+  background-color: darken($lightgreyColor, $scale);
 }
 
 @mixin breakpoints($min-device) {
-  @media screen and (min-width: map-get($breakpoints-map, $min-device)){
+  @media screen and (min-width: map-get($breakpointsMap, $min-device)){
       @content;
   }
+}
+
+@mixin checkTransitionTiming($type){
+    transition: $type 300ms 100ms linear;
 }
 
 /* ----- Applicable à toute la page ----- */
@@ -71,7 +79,7 @@ h1, h2, h3{
 }
 
 /* ----- Photo de présentation du restaurant ----- */
-.PageRestaurantPic{
+.PagerestaurantPic{
     height: 300px;
     width: 100%;
     background-size: cover;
@@ -80,28 +88,125 @@ h1, h2, h3{
     }
 
 .la_palette_du_gout{
-    background-image: url(../style/images/Restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg)
+    background-image: url(../style/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg)
 }
   
 .la_note_enchantee{
-    background-image: url(../style/images/Restaurants/stil-u2Lp8tXIcjw-unsplash.jpg)
+    background-image: url(../style/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg)
 }
   
 .a_la_francaise{
-    background-image: url(../style/images/Restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg)
+    background-image: url(../style/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg)
 }
   
 .le_delice_des_sens{
-    background-image: url(../style/images/Restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg)
+    background-image: url(../style/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg)
+}
+
+/* ----- Menu Loader ----- */
+.dishes{
+    display: flex;
+    justify-content: space-between;
+    background-color: $white;
+    margin-top: 14px;
+    border-radius: 1rem;
+    overflow: hidden;
+    @include shadowBox;
+    padding: 0;
+    position: relative;
+    opacity: 0;
+    &__text{
+        width: 80%;
+        transform: scaleX(1);
+        transform-origin: left;
+        @include checkTransitionTiming(width);
+        padding: 13px 0 13px 12px;
+        justify-content: space-between;
+        .dish_name{
+            font-weight: 600;
+            font-size: 1.1rem;
+            margin-bottom: 5px;
+            white-space: nowrap;
+        }
+        p{
+            margin: 0;
+            font-weight: 300;
+            font-size: 0.9rem;
+            text-overflow: ellipsis;
+        }
+    }
+    &__price{
+        align-self: flex-end;
+        color: $darkgreyColor;
+        font-weight: 700;
+        position: absolute;
+        right: 15px;
+        bottom: 15px;
+        transform-origin: right;
+        @include checkTransitionTiming(transform);
+    }
+    .check__animation{
+        display: flex;
+        background-color: $tertiaryColor;
+        width: $checkTransitionWidth;
+        transform-origin: right;
+        transform: scaleX(0);
+        @include checkTransitionTiming(transform);
+        .anim_icon{
+            color: $white;
+            font-size: 1.6rem;
+            margin: auto;
+            transform: rotate(0deg);
+            @include checkTransitionTiming(transform);
+        }
+    }
+    &:hover{
+        cursor: pointer;
+    }
+    &:hover .dishes__text{
+        width: 60%;
+        .dish_name, p{
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+    }
+    &:hover .check__animation{
+        transform: scaleX(1);
+    }
+    &:hover .anim_icon{
+        transform: rotate(360deg);
+    }
+    &:hover .dishes__price{
+        transform: translateX(-$checkTransitionWidth);
+    }
+
+    @keyframes menu-load{
+        0% {
+            transform: translateY(20px);
+        }
+        75%{
+            opacity: .5;
+        }
+        100% {
+            transform: translate(0);
+            opacity: 1;
+        }
+    }
+    @for $i from 1 through ($maxDishes){
+        &:nth-of-type(#{$i}){
+            animation: menu-load 800ms $menuAppearDelay*$i forwards;
+        }
+    }
 }
 
 /* ----- Nom du restaurant + like ----- */
-.RestaurantName{
+.restaurantName{
     height: 60px;
     margin-top: -30px;
     justify-content: space-between;
     align-items: baseline;
-    @include background_grey (4%);
+    @include backgroundGrey (4%);
     border-radius: 1.8rem 1.8rem 0 0;
     position: relative;
 
@@ -119,7 +224,7 @@ h1, h2, h3{
     }
 }
 
-#EmptyHeart {
+#emptyHeart {
     margin-top: 25px;
     margin-right: 20px;
     position: relative;
@@ -128,25 +233,25 @@ h1, h2, h3{
     opacity: 1;
     display: block; 
   }
-  #FullHeart {
+  #fullHeart {
     margin-top: 25px;
     margin-right: 20px;
     height: 25px;
   }
   
   .Like {
-    #FullHeart {
+    #fullHeart {
       opacity: 0;
     }
-    #EmptyHeart {
+    #emptyHeart {
       opacity: 1;
     }
     &:hover{
-      #EmptyHeart {
+      #emptyHeart {
         display: none;
         opacity: 0;
       }
-      #FullHeart {
+      #fullHeart {
         display: block;
         opacity: 1;
         transition: opacity 2s ease-in; 
@@ -157,7 +262,7 @@ h1, h2, h3{
 
 /* ----- Entrées ----- */
 .Menu{
-    @include background_grey (4%);
+    @include backgroundGrey (4%);
     padding: 10px 20px;
 
     .StartersMenu, .MainsMenu, .DessertsMenu{
@@ -174,7 +279,7 @@ h1, h2, h3{
             display: block;
             height: 3px;
             width: 50px;
-            background-color: $tertiary-color;
+            background-color: $tertiaryColor;
             margin-top: 5px;
         }
     }
@@ -187,7 +292,7 @@ h1, h2, h3{
     margin-top: 14px;
     border-radius: 1rem;
     overflow: hidden;
-    @include shadow-box;
+    @include shadowBox;
     padding: 0;
     position: relative;
     
@@ -223,6 +328,12 @@ h1, h2, h3{
 
 
 /* ----- Buton commander ----- */
+
+.Button {
+    width: 100%;
+    text-align: center;
+}
+
 .btn{
     display:block;
     margin:auto !important;
@@ -237,15 +348,15 @@ h1, h2, h3{
     font-size: 1rem;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    background: linear-gradient(170deg, $secondary-color, lighten($primary-color, 5%));
-    @include shadow-box;
+    background: linear-gradient(170deg, $secondaryColor, lighten($primaryColor, 5%));
+    @include shadowBox;
     cursor: pointer;
     a{
         color: $white;
     }
     &:hover{
-        background: linear-gradient(170deg, lighten($secondary-color, 8%), lighten($primary-color, 8%));
-        @include shadow-box(20%);
+        background: linear-gradient(170deg, lighten($secondaryColor, 8%), lighten($primaryColor, 8%));
+        @include shadowBox(20%);
     }
     @include breakpoints(tablet){
         transform: scale(1.1);
@@ -259,27 +370,27 @@ h1, h2, h3{
     .DishText{
         transform: scaleX(1);
         transform-origin: left;
-        @include check-transition-timing(width);
+        @include checkTransitionTiming(width);
     }
 
     .DishPrice{
         transform-origin: right;
-        @include check-transition-timing(transform);
+        @include checkTransitionTiming(transform);
     }
 
     .Check{
         display: flex;
-        background-color: $tertiary-color;
-        width: $check-transition-width;
+        background-color: $tertiaryColor;
+        width: $checkTransitionWidth;
         transform-origin: right;
         transform: scaleX(0);
-        @include check-transition-timing(transform);
+        @include checkTransitionTiming(transform);
         .CheckIcon{
             color: $white;
             font-size: 1.6rem;
             margin: auto;
             transform: rotate(0deg);
-            @include check-transition-timing(transform)
+            @include checkTransitionTiming(transform)
         }
     }
     &:hover{
@@ -300,7 +411,7 @@ h1, h2, h3{
         transform: rotate(360deg);
     }
     &:hover .Dish_Price{
-        transform: translateX(-$check-transition-width);
+        transform: translateX(-$checkTransitionWidth);
     }
 
     @keyframes menu-load{
@@ -315,16 +426,16 @@ h1, h2, h3{
             opacity: 1;
         }
     }
-    @for $i from 1 through ($max-dishes){
+    @for $i from 1 through ($maxDishes){
         &:nth-of-type(#{$i}){
-            animation: menu-load 800ms $menu-appear-delay*$i forwards;
+            animation: menu-load 800ms $menuAppearDelay*$i forwards;
         }
     }
 }
 
 /* ----- Mise en page pied de page ----- */
 footer{
-    @include background_grey (65%);
+    @include backgroundGrey (65%);
   
     h3, a, i {
       color: white;
