--- a/style/style_page_a_la_francaise.css
+++ b/style/style_page_a_la_francaise.css
@@ -80,8 +80,20 @@ h1, h2, h3 {
   }
 }
 
+.la_palette_du_gout {
+  background-image: url(../style/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+}
+
 .la_note_enchantee {
   background-image: url(../style/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg);
+}
+
+.a_la_francaise {
+  background-image: url(../style/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
+}
+
+.le_delice_des_sens {
+  background-image: url(../style/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
 }
 
 /* ----- menu Loader ----- */
@@ -632,4 +644,4 @@ footer i {
     font-size: 1.2rem;
   }
 }
-/*# sourceMappingURL=style_page_la_note_enchantee.css.map */
+/*# sourceMappingURL=style_page_a_la_francaise.css.map */
