--- a/style/style_page_la_palette_du_gout.css
+++ b/style/style_page_la_palette_du_gout.css
@@ -80,8 +80,8 @@ h1, h2, h3 {
   }
 }
 
-.la_note_enchantee {
-  background-image: url(../style/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg);
+.la_palette_du_gout {
+  background-image: url(../style/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
 }
 
 /* ----- menu Loader ----- */
@@ -398,7 +398,7 @@ h1, h2, h3 {
 @media screen and (min-width: 600px) {
   .dishOptions .dishText .dishName {
     display: block;
-    width: 50%;
+    width: 47%;
     margin-bottom: 0px;
     font-size: 1.2rem;
   }
@@ -632,4 +632,4 @@ footer i {
     font-size: 1.2rem;
   }
 }
-/*# sourceMappingURL=style_page_la_note_enchantee.css.map */
+/*# sourceMappingURL=style_page_la_palette_du_gout.css.map */
