--- a/style/style_page_la_palette_du_gout.scss
+++ b/style/style_page_la_palette_du_gout.scss
@@ -99,9 +99,9 @@ h1, h2, h3{
         height: 350px;
     }
 }
- 
-.la_note_enchantee{
-    background-image: url(../style/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg)
+
+.la_palette_du_gout{
+    background-image: url(../style/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg)
 }
 
 /* ----- menu Loader ----- */
@@ -325,7 +325,7 @@ h1, h2, h3{
             white-space: nowrap;
             @include breakpoints(tablet){
                 display: block;
-                width: 50%;
+                width: 47%;
                 margin-bottom: 0px;
                 font-size: 1.2rem;
             }
