--- a/style/style_page_le_delice_des_sens.css
+++ b/style/style_page_le_delice_des_sens.css
@@ -80,8 +80,8 @@ h1, h2, h3 {
   }
 }
 
-.la_note_enchantee {
-  background-image: url(../style/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg);
+.le_delice_des_sens {
+  background-image: url(../style/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
 }
 
 /* ----- menu Loader ----- */
@@ -632,4 +632,4 @@ footer i {
     font-size: 1.2rem;
   }
 }
-/*# sourceMappingURL=style_page_la_note_enchantee.css.map */
+/*# sourceMappingURL=style_page_le_delice_des_sens.css.map */
