--- a/style/style_page_le_delice_des_sens.scss
+++ b/style/style_page_le_delice_des_sens.scss
@@ -100,8 +100,8 @@ h1, h2, h3{
     }
 }
  
-.la_note_enchantee{
-    background-image: url(../style/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg)
+.le_delice_des_sens{
+    background-image: url(../style/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg)
 }
 
 /* ----- menu Loader ----- */
